add and design header and footer
add custom font

--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokeDex</title>
+    <link rel="stylesheet" href="./styles/fonts.css">
     <script src="./script.js"></script>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/standart.css">
+    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/footer.css">
 </head>
 <body>
-    
+    <header>
+        <div class="header-middle-desgin">
+            <div class="middle-container">
+                <div class="circle">
+                    <div class="inner-circle">
+                        <div class="inner-circle-texture">
+                            <div class="green-led"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </header>
+    <div id="content">
+        <h1>DAs wird ein PokeDex</h1>
+    </div>
+    <footer>
+        <div class="footer-box"></div>
+    </footer>
 </body>
 </html>
