--- a/index.html
+++ b/index.html
@@ -14,20 +14,29 @@
 <body>
     <header>
         <div class="header-middle-desgin">
+            <div class="header-infos">
+                <p>GESEHEN</p>
+                <p>....................</p>
+                <p>[000]</p>
+            </div>
             <div class="middle-container">
                 <div class="circle">
                     <div class="inner-circle">
                         <div class="inner-circle-texture">
-                            <div class="green-led"></div>
+                            <input class="green-led" type="text">
                         </div>
                     </div>
                 </div>
             </div>
-            
+            <div class="header-infos">
+                <p>GEFANGEN</p>
+                <p>....................</p>
+                <p>[000]</p>
+            </div>
         </div>
     </header>
     <div id="content">
-        <h1>DAs wird ein PokeDex</h1>
+        <h1>DAS WIRD EIN POKEDEX</h1>
     </div>
     <footer>
         <div class="footer-box"></div>
