--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/footer.css">
 </head>
-<body>
+<body onload="init()">
     <header>
         <div class="header-middle-desgin">
             <div class="header-infos">
@@ -23,7 +23,7 @@
                 <div class="circle">
                     <div class="inner-circle">
                         <div class="inner-circle-texture">
-                            <input class="green-led" type="text">
+                            <input class="green-led" type="text" placeholder="Suche...">
                         </div>
                     </div>
                 </div>
