add little render function

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </header>
     <div id="content">
         <h1>DAS WIRD EIN POKEDEX</h1>
+        <p id="namesList"></p>
     </div>
     <footer>
         <div class="footer-box"></div>
