--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokeDex</title>
+    <link rel="shortcut icon" href="./assets/img/pokemon-colored.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles/fonts.css">
-    <script src="./script.js"></script>
+    <link rel="stylesheet" href="./styles/cards.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./styles/standart.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <script src="./script.js"></script>
 </head>
 <body onload="init()">
     <header>
