--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <script src="./script.js"></script>
+    <script src="./scripts/template.js"></script>
 </head>
 <body onload="init()">
     <header>
