--- a/index.html
+++ b/index.html
@@ -38,10 +38,7 @@
             </div>
         </div>
     </header>
-    <div id="content">
-        <h1>DAS WIRD EIN POKEDEX</h1>
-        <p id="namesList"></p>
-    </div>
+    <div id="content"></div>
     <footer>
         <div class="footer-box"></div>
     </footer>
