Add id successful

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </div>
     </header>
     <div id="content"></div>
-    <footer>
+    <!-- <footer>
         <div class="footer-box"></div>
-    </footer>
+    </footer> -->
 </body>
 </html>
