Add style => backroundcolor

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/standart.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <script src="./scripts/colors.js"></script>
     <script src="./scripts/translateer.js"></script>
     <script src="./script.js"></script>
     <script src="./scripts/template.js"></script>
