add butten to load more pokemons

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         </div>
     </header>
     <div id="content"></div>
+    <div id="button-container">
+        <button class="load-more-button" onclick="loadMore()">mehr</button>
+    </div>
     <!-- <footer>
         <div class="footer-box"></div>
     </footer> -->
