--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="header-infos">
                 <p>GESEHEN</p>
                 <p>....................</p>
-                <p>[000]</p>
+                <p id="seenPokemon">[000]</p>
             </div>
             <div class="middle-container">
                 <div class="circle">
