Add loading Spinner

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/standart.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./styles/loading-spinner.css">
     <script src="./scripts/colors.js"></script>
     <script src="./scripts/translateer.js"></script>
     <script src="./script.js"></script>
@@ -41,9 +42,10 @@
         </div>
     </header>
     <div id="content"></div>
-    <div id="button-container">
+    <div id="buttonContainer">
         <button class="load-more-button" onclick="loadMore()">mehr</button>
     </div>
+    <div id="loadingOverlay"><img src="./assets/img/pokeIdsymb.png" alt=""></div>
     <!-- <footer>
         <div class="footer-box"></div>
     </footer> -->
