Add filter function

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 <div class="circle">
                     <div class="inner-circle">
                         <div class="inner-circle-texture">
-                            <input class="green-led" type="text" placeholder="Suche...">
+                            <input id="search-input" class="green-led" type="text" placeholder="Suche...">
+                            <div class="pokemon-name" id="pokemonName${i}"></div>
                         </div>
                     </div>
                 </div>
