delete noticed code

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <div onclick="closeinfoOverlay()" id="pokemonInfoOverlay">
         
     </div>
-    <!-- <footer>
+    <footer>
         <div class="footer-box"></div>
-    </footer> -->
+    </footer>
 </body>
 </html>
